--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
       "email": "info@fridokoch.de"
     }
   ],
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "require": {
     "php": ">=5.3.2",
     "symfony/framework-bundle": "~2.1|~3.0|~4.0",
